force-app/main/default/objects/SPEN_OtherService__c/SPEN_OtherService__c.object-meta.xml
<CustomObject>
    <label>Other Service</label>
    <nameField>
        <displayFormat>OS-{0000}</displayFormat>
        <label>Other Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>