force-app/main/default/objects/SPEN_OtherService__c/fields/SPEN_OtherServiceNotes__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherServiceNotes__c</fullName>
    <description>Field created to capture other service notes value as part of CRMD-5580</description>
    <label>Other Service Notes</label>
    <type>TextArea</type>
</CustomField>