force-app/main/default/objects/SPEN_OtherService__c/fields/SPEN_OtherServicesEndDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherServicesEndDate__c</fullName>
    <description>Created as part of CRMD-5580</description>
    <label>Other services end date</label>
    <type>Date</type>
</CustomField>