force-app/main/default/objects/SPEN_OtherService__c/fields/SPEN_OtherServicesStartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherServicesStartDate__c</fullName>
    <description>Field created to capture other service date value as part of CRMD-5580</description>
    <label>Other services start date</label>
    <type>Date</type>
</CustomField>