force-app/main/default/objects/SPEN_OtherService__c/fields/SPEN_ServiceContractors__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ServiceContractors__c</fullName>
    <description>Field to capture Service Contractors value as part of CRMD-5580</description>
    <label>Service Contractors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>