force-app/main/default/objects/SPEN_OtherService__c/fields/SPEN_TypesOfServices__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TypesOfServices__c</fullName>
    <description>Field created to capture service types value as part of CRMD-5580</description>
    <label>Types of services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Joiner</fullName>
            </value>
            <value>
                <fullName>Decorating</fullName>
            </value>
            <value>
                <fullName>Carpets</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>